--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Image and File Compressor</title>
+  <title>Free Image Compressor - Compress PNG, JPG & WebP Online</title>
+  <meta name="description" content="Compress images online for free. Reduce PNG, JPG, WebP file size without losing quality. Fast & easy image compression.">
+  <meta name="keywords" content="image compressor, compress png, compress jpg, online image compression, reduce image size">
+  <link rel="canonical" href="https://compressor-nine-pied.vercel.app/">
+  <meta property="og:title" content="Free Image Compressor - Compress PNG, JPG & WebP Online">
+  <meta property="og:description" content="Compress images online for free without losing quality.">
+  <meta property="og:url" content="https://compressor-nine-pied.vercel.app/">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+
   <link rel="stylesheet" href="style.css" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
